--- a/dockerfiles/dien/Dockerfile.dien
+++ b/dockerfiles/dien/Dockerfile.dien
@@ -3,7 +3,7 @@ FROM ubuntu:20.04
 RUN apt update \
     && apt install -y python3 python3-pip wget git \
     && ln -s /usr/bin/python3 /usr/bin/python \
-    && python -m pip install intel-tensorflow==2.5.0 protobuf==3.20.1 -i https://pypi.tuna.tsinghua.edu.cn/simple
+    && python -m pip install intel-tensorflow==2.12.0 -i https://pypi.tuna.tsinghua.edu.cn/simple
 
 RUN mkdir /root/dataset \
     && cd /root/dataset \
